@@ -784,6 +784,33 @@ asciidoc.install(2);
 </div>
 </div>
 <div class="sect1">
+<h2 id="_version_1_9_9_1_2014_00_00">Version 1.9.9.1 (2014-00-00)</h2>
+<div class="sectionbody">
+<div class="ulist"><ul>
+<li>
+<p>
+switch ssize_t types in utarray/utstring to size_t (thanks, Hong Xu!)
+</p>
+</li>
+<li>
+<p>
+fix utstring pointer math on &gt;4GB strings (thanks, Thomas Bottesch!)
+</p>
+</li>
+<li>
+<p>
+change FNV hash to FNV-1a varation (thanks, dwest1975!)
+</p>
+</li>
+<li>
+<p>
+fix bug in HASH_REPLACE_STR (thanks, Ilya Kaliman!)
+</p>
+</li>
+</ul></div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="_version_1_9_9_2014_02_25">Version 1.9.9 (2014-02-25)</h2>
 <div class="sectionbody">
 <div class="ulist"><ul>
@@ -1505,7 +1532,7 @@ Initial release
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-02-25 21:25:49 EST
+Last updated 2014-07-04 09:48:31 EDT
 </div>
 </div>
 </body>
