@@ -35,7 +35,6 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #endif
 
 #include <stdlib.h>
-#include <sys/types.h>  /* ssize_t */
 #include <string.h>
 #include <stdarg.h>
 #define oom() exit(-1)
@@ -156,7 +155,7 @@ _UNUSED_ static void utstring_printf(UT_string *s, const char *fmt, ...) {
 /* Build KMP table from left to right. */
 _UNUSED_ static void _utstring_BuildTable(
     const char *P_Needle, 
-    ssize_t P_NeedleLen, 
+    size_t P_NeedleLen, 
     long *P_KMP_Table)
 {
     long i, j;
@@ -196,7 +195,7 @@ _UNUSED_ static void _utstring_BuildTable(
 /* Build KMP table from right to left. */
 _UNUSED_ static void _utstring_BuildTableR(
     const char *P_Needle, 
-    ssize_t P_NeedleLen, 
+    size_t P_NeedleLen, 
     long *P_KMP_Table)
 {
     long i, j;
@@ -305,7 +304,7 @@ _UNUSED_ static long utstring_find(
     UT_string *s, 
     long P_StartPosition,   /* Start from 0. -1 means last position. */
     const char *P_Needle, 
-    ssize_t P_NeedleLen)
+    size_t P_NeedleLen)
 {
     long V_StartPosition;
     long V_HaystackLen;
@@ -351,7 +350,7 @@ _UNUSED_ static long utstring_findR(
     UT_string *s, 
     long P_StartPosition,   /* Start from 0. -1 means last position. */
     const char *P_Needle, 
-    ssize_t P_NeedleLen)
+    size_t P_NeedleLen)
 {
     long V_StartPosition;
     long V_HaystackLen;
